tests/errors/program_without_line_03.f90
print *, "OK"
end
print *, "OK"
